# rust-glancer

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  deny.toml
.github/scripts/: render_memory_profile_comment.py
.github/workflows/: ci.yml  codspeed.yml  performance.yml
crates/analysis/: Cargo.toml
crates/arena/: Cargo.toml
crates/body-ir/: Cargo.toml
crates/def-map/: Cargo.toml
crates/def-map/src/: cache.rs  collect.rs  cursor.rs  data.rs  db.rs  ids.rs  import.rs  lib.rs  memsize.rs  path.rs  path_resolution.rs  resolve.rs  scope.rs  txn.rs
crates/def-map/src/def_map/: cursor.rs  data.rs  ids.rs  import.rs  mod.rs  path.rs  path_resolution.rs  resolve.rs
crates/def-map/src/def_map/tests/: utils.rs
crates/def-map/src/resolve/: build.rs  implicit_roots.rs  imports.rs  mod.rs  rebuild.rs  scope.rs
crates/def-map/src/tests/: general.rs  path_resolution.rs  rebuild.rs  utils.rs
crates/item-tree/: Cargo.toml
crates/item-tree/src/: db.rs  lib.rs  lower.rs  memsize.rs
crates/item-tree/src/item/: decl.rs  docs.rs  import.rs  kind.rs  mod.rs  module.rs  type_ref.rs
crates/item-tree/src/item_tree/: lower.rs  mod.rs
crates/item-tree/src/item_tree/item/: decl.rs  import.rs  kind.rs  mod.rs  type_ref.rs  visibility.rs
crates/item-tree/src/item_tree/tests/: utils.rs
crates/item-tree/src/tests/: mod.rs  utils.rs
crates/parse/: Cargo.toml
crates/parse/src/: db.rs  error.rs  file.rs  lib.rs  memsize.rs  package.rs  span.rs  target.rs
crates/parse/src/parse/: file.rs  mod.rs  package.rs
crates/parse/src/tests/: mod.rs  utils.rs
crates/project/: Cargo.toml
crates/project/benches/: analysis_pipeline.rs
crates/project/benches/shared/: mod.rs
crates/project/src/: host.rs  lib.rs  memsize.rs  profile.rs  project.rs  residency.rs  tests.rs  txn.rs
crates/project/src/cache/: cached.rs  codec.rs  fingerprint.rs  header.rs  integration.rs  mod.rs  payload.rs  plan.rs  store.rs
crates/project/src/cache/tests/: mod.rs  utils.rs
crates/project/src/host/: mod.rs  rebuild.rs  update.rs  workspace_graph.rs
crates/project/src/project/: demand.rs  inventory.rs  memsize.rs  mod.rs  rebuild.rs  snapshot.rs  state.rs  txn.rs  update.rs  workspace_graph.rs
crates/project/src/project/update/: mod.rs  package.rs  workspace.rs
crates/project/src/tests/: mod.rs  utils.rs
crates/rust-glancer/: Cargo.toml
crates/rust-glancer/src/: main.rs  runtime.rs
crates/rust-glancer/src/analyze/: fmt.rs  mod.rs
crates/rust-glimpser/: Cargo.toml
crates/rust-glimpser/src/: item_tree.rs  lib.rs  main.rs  project.rs  test_fixture.rs
crates/rust-glimpser/src/analysis/: completion.rs  cursor.rs  data.rs  mod.rs  navigation.rs  symbol.rs  ty.rs
crates/rust-glimpser/src/analysis/tests/: completions_at_dot.rs  goto_definition.rs  mod.rs  resolve_symbol.rs  symbol_at.rs  type_at.rs  utils.rs
crates/rust-glimpser/src/body_ir/: cursor.rs  data.rs  ids.rs  lower.rs  mod.rs  resolution.rs
crates/rust-glimpser/src/body_ir/tests/: mod.rs  utils.rs
crates/rust-glimpser/src/def_map/: collect.rs  cursor.rs  data.rs  ids.rs  import.rs  mod.rs  path.rs  path_resolution.rs  resolve.rs
crates/rust-glimpser/src/def_map/tests/: general.rs  imports.rs  mod.rs  path_resolution.rs  scope.rs  utils.rs
crates/rust-glimpser/src/item_tree/: error.rs  file.rs  lower.rs  mod.rs  span.rs  target.rs  tests.rs
crates/rust-glimpser/src/item_tree/item/: decl.rs  import.rs  kind.rs  mod.rs  module.rs  type_ref.rs  types.rs  visibility.rs
crates/rust-glimpser/src/item_tree/package/: builder.rs  mod.rs
crates/rust-glimpser/src/item_tree/tests/: mod.rs  utils.rs
crates/rust-glimpser/src/parse/: error.rs  file.rs  krate.rs  mod.rs  package.rs  span.rs  target.rs
crates/rust-glimpser/src/parse/def_map/: collect.rs  data.rs  ids.rs  import.rs  mod.rs  resolve.rs  tests.rs
crates/rust-glimpser/src/parse/item/: mod.rs
crates/rust-glimpser/src/parse/package/: index.rs  mod.rs
crates/rust-glimpser/src/parse/tests/: mod.rs  parse.rs
crates/rust-glimpser/src/project/: mod.rs  package.rs  tests.rs
crates/rust-glimpser/src/semantic_ir/: cursor.rs  data.rs  ids.rs  lower.rs  mod.rs  resolution.rs
crates/rust-glimpser/src/semantic_ir/tests/: mod.rs  utils.rs
crates/rust-glimpser/src/test_utils/: fixture.rs  metadata_ext.rs  mod.rs  paths.rs  query.rs  snapshot.rs
crates/rust-glimpser/src/workspace_metadata/: mod.rs
crates/rust-glimpser/src/workspace_metadata/tests/: mod.rs  utils.rs
crates/semantic-ir/: Cargo.toml
crates/semantic-ir/src/: cache.rs  cursor.rs  data.rs  db.rs  ids.rs  items.rs  lib.rs  lower.rs  memsize.rs  package.rs  resolution.rs  signature.rs  target.rs  txn.rs
crates/semantic-ir/src/semantic_ir/: cursor.rs  data.rs  ids.rs  resolution.rs
crates/semantic-ir/src/semantic_ir/tests/: utils.rs
crates/semantic-ir/src/tests/: mod.rs  utils.rs
test_targets/: README.md
test_targets/bench_fixtures/small_app/: Cargo.toml  README.md
test_targets/bench_fixtures/small_app/crates/api/: Cargo.toml
test_targets/bench_fixtures/small_app/crates/api/src/: lib.rs
test_targets/bench_fixtures/small_app/crates/cli/: Cargo.toml
test_targets/bench_fixtures/small_app/crates/cli/src/: main.rs
test_targets/bench_fixtures/small_app/crates/domain/: Cargo.toml
test_targets/bench_fixtures/small_app/crates/domain/src/: lib.rs
test_targets/complex_crate/: Cargo.toml
test_targets/complex_crate/src/: lib.rs  main.rs  pipeline.rs  text.rs
test_targets/complex_crate/tests/: integration_async.rs
test_targets/complex_workspace/: Cargo.toml
test_targets/complex_workspace/crates/app/: Cargo.toml
test_targets/complex_workspace/crates/app/src/: lib.rs  main.rs
test_targets/complex_workspace/crates/app/tests/: integration.rs
test_targets/complex_workspace/crates/common/: Cargo.toml
test_targets/complex_workspace/crates/common/src/: lib.rs
test_targets/complex_workspace/crates/worker/: Cargo.toml
test_targets/complex_workspace/crates/worker/src/: lib.rs
test_targets/complex_workspace/crates/worker/tests/: batch.rs
(+346 files in other folders)
