[package]
name = "rg_def_map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["display"] }
rg_item_tree.workspace = true
rg_parse.workspace = true
rg_workspace.workspace = true

[dev-dependencies]
expect-test.workspace = true
test_fixture.workspace = true
