[package]
name = "rg_parse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
ra_syntax.workspace = true
rg_workspace.workspace = true

[dev-dependencies]
cargo_metadata = { workspace = true, features = ["builder"] }
test_fixture.workspace = true
