[package]
name = "rust-glancer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
cargo_metadata.workspace = true
rg_memsize.workspace = true
rg_project.workspace = true
rg_workspace.workspace = true
rg_lsp.workspace = true
