[workspace]
members = ["crates/api", "crates/cli", "crates/domain"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
axum = { version = "=0.8.9", features = ["json", "tokio"] }
clap = { version = "=4.6.1", features = ["derive", "env"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.52.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }

small_app_api = { path = "crates/api" }
small_app_domain = { path = "crates/domain" }
