[package]
name = "small_app_cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
serde_json.workspace = true
small_app_api.workspace = true
small_app_domain.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
